<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Triage</string>
    <string name="dont_panic">Don\'t Panic!</string>
    <string name="action_settings">Settings</string>
    <string name="find_patient">Find Patient by Health Card Number</string>
    <string name="title_activity_patient_display">[Patient]</string>
    <string name="hello_world">Hello world!</string>
    <string name="hcn_search_hint">Health Card Number</string>
    <string name="filter_by_hcn">Filter by Health Card Number</string>
    <string name="load_content">Load Database from File (not yet implemented)</string>
    <string name="load_database">Load Database from File&#8230;</string>
    <string name="patients">Patients</string>
    <string name="get_record">Get record</string>
    <string name="save_database">Save Database to File</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_visits">VisitsActivity</string>
    <string name="title_activity_create_visits">CreateVisitsActivity</string>
    <string name="title_activity_create_visit">CreateVisitActivity</string>
    <string name="visits">Visits by Date</string>
    <string name="title_activity_add_vital">Add Vital Sign</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="hour">Hour</string>
    <string name="minute">Minute</string>
    <string name="date_of_reading">Date of reading: </string>
    <string name="time_of_reading">Time of reading: </string>
    <string name="choose_vital_sign_to_add">Choose a vital sign to add: </string>
    <string name="temperature">Temperature</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="blood_pressure">Blood Pressure </string>
    <string name="temperature_reading">Temperature Reading: </string>
    <string name="heart_rate_reading">Heart Rate Reading: </string>
    <string name="blood_pressure_reading">Blood Pressure Reading: </string>
    <string name="title_activity_add_temperature">Add Temperature Reading</string>
    <string name="add">Add</string>
    <string name="title_activity_display">DisplayActivity</string>
    <string name="title_activity_add_heart_rate">Add Heart Rate Reading</string>
    <string name="title_activity_message_display">MessageDisplayActivity</string>
    <string name="title_activity_add_blood_pressure">Add Blood Pressure Reading</string>
    <string name="title_activity_make_patient_seen">Mark Patient as Seen</string>
    <string name="title_activity_visit">VisitActivity</string>
    <string name="add_visit">Add Visit</string>
    <string name="note_for_adding_visits">        (Note: for easy entering of the current date and time, leave all fields empty and click "Add Visit".)</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="name">Name</string>
    <string name="health_number">Health Number</string>
    <string name="visits_by_date">Visits By Date</string>
    <string name="add_vital">Add Vital Sign</string>
    <string name="date_seen">Date Seen</string>
    <string name="time_seen">Time Seen</string>
    <string name="make_patient_seen">Mark Patient as Seen</string>
    <string name="note_for_make_patient_seen">(Note: for easy entering of the current date and time, 
   	    leave all fields empty and click "Mark Patient as Seen".)</string>
   	<string name="title_activity_mark_patient_seen">MarkPatientSeen</string>
   	<string name="heartrateListLabel">Heart Rate</string>
    <string name="tempListLabel">Temperature</string>
    <string name="bp_label">Blood Pressure</string>
    <string name="visit_date">Date of Visit</string>
    <string name= "date_of_arrival">Date of arrival:</string>
    <string name= "time_of_arrival">Time of arrival:</string>

    <!-- Colors -->

    <color name="light_grey">#DDDDDD</color>
    <color name="xlight_grey">#EEEEEE</color>
    <color name="white">#FFFFFF</color>
    <color name="dark_grey">#555555</color>
    <string name="visit_on">"Visit on "</string>


</resources>
