<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/date_seen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/date_seen" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal">
        
        <EditText
            android:id="@+id/daySeen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/day"
            android:inputType="date" />
        
        <EditText
            android:id="@+id/monthSeen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/month"
            android:inputType="date" />
        
        <EditText
            android:id="@+id/yearSeen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/year"
            android:inputType="date" />
        
    </LinearLayout>
    
    <TextView
        android:id="@+id/time_seen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_seen" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal">
        
        <EditText
            android:id="@+id/hourSeen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hour"
            android:inputType="date" />
        
        <EditText
            android:id="@+id/minuteSeen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="Minute"
            android:inputType="@string/minute" />

    </LinearLayout>

    <Button
        android:id="@+id/makePatientSeen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="makePatientSeen"
        android:text="@string/make_patient_seen" />

    <TextView
        android:id="@+id/healthnumberLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note_for_make_patient_seen" />
    
</LinearLayout>