<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    
    <TextView
        android:id="@+id/dateSeenView"
        android:layout_marginTop="100dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_of_arrival" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal">
        
        <EditText
            android:id="@+id/day"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/day"
            android:inputType="date" />
        
        <EditText
            android:id="@+id/month"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/month"
            android:inputType="date" />
        
        <EditText
            android:id="@+id/year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/year"
            android:inputType="date" />
        
    </LinearLayout>
    
    <TextView
        android:id="@+id/timeArrivedView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Time of arrival:" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal">
        
        <EditText
            android:id="@+id/hour"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hour"
            android:inputType="date" />
        
        <EditText
            android:id="@+id/minute"
            android:layout_weight="1"
        	android:layout_width="0dp"
        	android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            android:hint="Minute" />



    </LinearLayout>

    <Button
        android:id="@+id/addVisitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="createNewVisit"
        android:text="@string/add_visit" />

    <TextView
        android:id="@+id/healthnumberLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note_for_adding_visits" />
    
</LinearLayout>